# Homework_2.6

./: .gitignore  README.md  fill_data.py  pyproject.toml  salary.db  salary.sql
requests/: query_01.py  query_01.sql  query_02.py  query_02.sql  query_03.py  query_03.sql  query_04.py  query_04.sql  query_05.py  query_05.sql  query_06.py  query_06.sql  query_07.py  query_07.sql  query_08.py  query_08.sql  query_09.py  query_09.sql  query_10.py  query_10.sql  query_11.py  query_11.sql  query_12.py  query_12.sql  request_01.py  request_01.sql  request_02.py
