[tool.poetry]
name = "homework-2-6"
version = "0.1.0"
description = "SQL"
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
